--- a/dat158-2020-Lab1.ipynb
+++ b/dat158-2020-Lab1.ipynb
@@ -1027,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the correlation btween median house value and the new attributs it is suddenly clear that the ratio between bedrooms and total rooms correlates to the housing price. A lower bedroom/room ratio tend to be more expensive."
+    "Looking at the correlation between median house value and the new attributes it is now clear that the ratio between bedrooms and total rooms correlates to the housing price. A lower bedroom/room ratio tend to be more expensive."
    ]
   },
   {
@@ -1041,7 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start by reverting to a clean training set by once more copying the stratified training set. We also want to seperate the predictors (X) from the labels/targets (y):\n"
+    "By once more copying the stratified training set results in a clean training set before data cleaning. The predictors (X) are seperated from the labels/targets (y) and stored in two different datasets. \n"
    ]
   },
   {
@@ -1065,7 +1065,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to handle missing values: compute median values and fill them in where values are missing. Save the value so that it can be used in the test set later. "
+    "Most algorithms cannot work with missing values so this needs to be handled. It is a common practise to compute the median values and fill them in where values are missing in the trainig set. Thee value is saved so that it can be used in the test set later. "
    ]
   },
   {
@@ -1082,7 +1082,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In our data set we have one feature that is not numerical, ocean proximity. We need to remove that before we try to compute the medians for each feature."
+    "Non-numerical features must be removed before computing the medians for each feature. In this dataset the ocean proximity is the only non-numerical feature. "
    ]
   },
   {
@@ -1117,8 +1117,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The array above shows the calculated medians for eight of the ten features in our dataset. Ocean proximity was dropped since it was not a numerical feature, and the labels are not calculated for obvious reasons. By using the imputers's transform method, all the missing values in the dataset will be replaced with the median value. Since the result is a numpy array it needs to be put back into a pandas DataFrame. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To deal with the non-numerical features, like the ocean proximity, we simply convert the different text values to numbers."
+    "To deal with the non-numerical features, like the ocean proximity, the different text values can be converted into numbers."
    ]
   },
   {
@@ -1164,12 +1171,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Changing the text values to numbers will make the ML algorithms think that the numeric values (0-4) will have a meaning. For example that two near by categories will be similar. This is not the case in our situation, our categories are not sorted so that two categories that are similar are next to each other. This can make the model perform different than how we want it to behave. To fix this we add a binary attribute for every category. We also want to convert the resulting sparse matrix to a NumPy array."
+    "Changing the text values to numbers will make the ML algorithms think that the numeric values (0-4) will have a meaning. For example that two nearby categories will be similar. This is not the case for the values for ocean proximity, the categories are not sorted in any way. Two categories that are similar will not neccessarily be next to each other. This can make the model perform different than how it is supposed to. This is handled by using a binary attribute for every category. The resulting sparse matrix is then converted to a NumPy array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1191,7 @@
        "       [1., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,8 +1205,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The non-numerical categories and the corresponding numerical categories are shown below. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1223,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1243,7 @@
        "[array([0., 1., 2., 3., 4.])]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,24 +1253,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "housing2 = pd.DataFrame(housing_cat_hot.toarray())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The way ocean proximity, represented by binary attributes, will be shown in the dataset:"
+    "Below is how the ocean proximity, represented by binary attributes, will be shown in the dataset:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -1341,13 +1346,14 @@
        "4  0.0  0.0  0.0  1.0  0.0"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "housing2.head()"
+    "housing_binary = pd.DataFrame(housing_cat_hot.toarray())\n",
+    "housing_binary.head()"
    ]
   },
   {
@@ -1361,7 +1367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Combines attributes like we did when we wanted to check for correlation between rooms and house prices. "
+    "It is useful to make a function for combining attributes (like done before to check for correlation between rooms and house prices). This transformer has a hyperparameter, add_bedrooms_per_room, set to True. This parameter will help determine if adding this attribute helps the machine learning algorithms or not. "
    ]
   },
   {
@@ -1551,7 +1557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above is the dataset with the new columns for rooms per household nad population per household. "
+    "Above is the dataset with the new columns for rooms per household and population per household. "
    ]
   },
   {
@@ -1572,8 +1578,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Standardization transforms data to have a mean of zero and a standard deviation of 1. We will use standardization and Scikit-Learn's Pipeline class to help with the sequences of transformations:\n",
-    "__Denne kombinerer alt vi har gjort over, skriv dette ned!__"
+    "Standardization transforms data to have a mean of zero and a standard deviation of 1. For this model standardization will be used. Since there are many transformation steps to be executed it can be handy to use Scikit-Learn's Pipeline class to help with the sequences of transformations. The following code will perform the previous described transformations of: \n",
+    "- replacing missing values with the median value, \n",
+    "- combining attributes to make new attributes,\n",
+    "- standardization. "
    ]
   },
   {
@@ -1598,7 +1606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ColumnTransformer handles the categorical columns and the numerical columns together and applies the appropriate transformations to the data in sequence:"
+    "The transformation of the ocean proximity text values into binary attributes is handled by Scikit-Learn's ColumnTransformer.  The appropriate transformations are applied to the data in sequence."
    ]
   },
   {
@@ -1920,7 +1928,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above we can see the first 10 rows of the dataset after we combinated attributes, performed standardization and transformed the cean proximity values to binary attributes."
+    "Above a preview of the dataset is shown, after it has been through the transformation pipeline. "
    ]
   },
   {
@@ -1948,7 +1956,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following code trains a linear regression model on the prepared training set:"
+    "The following code trains a linear regression model on the prepared training set."
    ]
   },
   {
@@ -1977,7 +1985,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can test in on some instances from the training set:"
+    "The model can be tested with some instances from the training set."
    ]
   },
   {
